[package]
name = "appc"
version = "0.0.1-dev"
authors = ["Luca Bruno <lucab@debian.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/camallo/appc-rs"
keywords = ["appc", "spec"]
exclude = [
".gitignore",
".travis.yml",
]

[dependencies]
error-chain = { version = "0.10", default-features = false }
libc = "0.2"
nix = "0.8"
semver = "0.6"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
sha2 = "0.5"
