[package]
name = "appc"
version = "0.0.1-dev"
authors = ["Luca Bruno <lucab@debian.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/camallo/appc-rs"
homepage = "https://github.com/camallo/appc-rs"
documentation = "https://docs.rs/appc"
description = """
Library implementing AppContainer Specification (appc-spec).

Shared maintenance under https://github.com/camallo.
"""
keywords = ["appc", "spec"]
exclude = [
".gitignore",
".travis.yml",
]

[dependencies]
error-chain = { version = "0.10", default-features = false }
libc = "0.2"
nix = "0.8"
parsswd = "0.1"
semver = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.5"
